--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,14 +1,14 @@
 ######################## default configuration ####################
-baseURL = "http://examplesite.org"
-title = "Educenter | hugo education template"
-theme = "educenter-hugo"
+baseURL = "https://www.alpharettalions.com"
+title = "Alpharetta Lions"
+theme = "alpharetta-lions"
 themesDir = "../.."
 # post pagination
 paginate = "6"
 # post excerpt
 summaryLength = "10"
 # disqus short name
-disqusShortname = "educenter" # get your shortname form here : https://disqus.com
+#disqusShortname = "educenter" # get your shortname form here : https://disqus.com
 # disable language
 disableLanguages = [] # desable language from here
 
@@ -46,14 +46,14 @@ link = "plugins/google-map/gmap.js"
 [params]
 logo = "images/logo.png"
 # Meta data
-description = "This is meta description"
-author = "Themefisher"
+description = "Alpharetta Lions Club Home Page"
+author = "Alpharetta Lions"
 # contact info
-address = "9567 Turner Trace Apt. BC C3G8A4"
-mobile = "+211234565523"
-email = "info@educenter.com"
+address = "Alpharetta, GA"
+mobile = ""
+email = "info@alpharettalions.com"
 # contact form action
-contact_form_action = "#" # contact form works with https://formspree.io
+contact_form_action = "https://formspree.io/f/xeqpbagr" # contact form works with https://formspree.io
 # Google Analitycs
 google_analitycs_id = "" # your id
 # top header
@@ -61,54 +61,54 @@ top_header = true
 
 # Preloader
 [params.preloader]
-enable = true
+enable = false
 preloader = "images/preloader.gif" # use jpg, png, svg or gif format.
 
 # Subscription
 [params.subscription]
-enable = true
+enable = false
 # mailchimp subsciption
 mailchimp_form_action = "https://gmail.us4.list-manage.com/subscribe/post?u=463ee871f45d2d93748e77cad&amp;id=a0a2c6d074" # replace this url with yours
 mailchimp_form_name = "b_463ee871f45d2d93748e77cad_a0a2c6d074" # replace this code with yours
 
 # google map
-[params.map]
-enable = true
-gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
-map_latitude = "51.5223477"
-map_longitude = "-0.1622023"
-map_marker = "images/marker.png" # marker size 37*55 px
+#[params.map]
+#enable = false
+#gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
+#map_latitude = "34.13197"
+#map_longitude = "-84.26002"
+#map_marker = "images/marker.png" # marker size 37*55 px
 
 # cookies
 [params.cookies]
-enable = true
+enable = false
 expire_days = 2
   
 ############################# social site ########################
 [[params.social]]
 title = "facebook"
 icon = "ti-facebook" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://www.facebook.com/AlpharettaLionsClub"
 
 [[params.social]]
 title = "twitter"
 icon = "ti-twitter-alt" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://twitter.com/todo"
 
 [[params.social]]
 title = "instagram"
 icon = "ti-instagram" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://www.instagram.com/todo"
 
-[[params.social]]
-title = "github"
-icon = "ti-github" # themify icon : https://themify.me/themify-icons
-link = "#"
+#[[params.social]]
+#title = "github"
+#icon = "ti-github" # themify icon : https://themify.me/themify-icons
+#link = "#"
 
 [[params.social]]
 title = "linkedin"
 icon = "ti-linkedin" # themify icon : https://themify.me/themify-icons
-link = "#"
+link = "https://www.linkedin.com/todo"
 
 
 ################################### English language #####################################
@@ -119,7 +119,7 @@ contentDir = "content/english"
 weight = 1
 home = "Home"
 # copyright
-copyright = "Copyright &copy; 2020 a hugo theme by [themefisher](https://themefisher.com)"
+copyright = "Copyright &copy; 2021 Alpharetta Lions Club Foundation.  Hugo theme &copy; 2020 [themefisher](https://themefisher.com)"
 
 
 
@@ -132,43 +132,43 @@ url = "about"
 weight = 1
 
 [[Languages.en.menu.main]]
-name = "course"
-url = "course"
+name = "Events"
+url = "event"
 weight = 2
 
+#[[Languages.en.menu.main]]
+#weight = 3
+#name = "Pages"
+#hasChildren = true
+#
+#  [[Languages.en.menu.main]]
+#  parent = "Pages"
+#  name = "teacher"
+#  url = "teacher"
+#
+#  [[Languages.en.menu.main]]
+#  parent = "Pages"
+#  name = "notice"
+#  url = "notice"
+#
+#  [[Languages.en.menu.main]]
+#  parent = "Pages"
+#  name = "event"
+#  url = "event"
+#
+#  [[Languages.en.menu.main]]
+#  parent = "Pages"
+#  name = "scholarship"
+#  url = "scholarship"
+#
+#  [[Languages.en.menu.main]]
+#  parent = "Pages"
+#  name = "research"
+#  url = "research"
+
 [[Languages.en.menu.main]]
-weight = 3
-name = "Pages"
-hasChildren = true
-
-  [[Languages.en.menu.main]]
-  parent = "Pages"
-  name = "teacher"
-  url = "teacher"
-
-  [[Languages.en.menu.main]]
-  parent = "Pages"
-  name = "notice"
-  url = "notice"
-
-  [[Languages.en.menu.main]]
-  parent = "Pages"
-  name = "event"
-  url = "event"
-
-  [[Languages.en.menu.main]]
-  parent = "Pages"
-  name = "scholarship"
-  url = "scholarship"
-
-  [[Languages.en.menu.main]]
-  parent = "Pages"
-  name = "research"
-  url = "research"
-  
-[[Languages.en.menu.main]]
-name = "blog"
-url = "blog"
+name = "News"
+url = "news"
 weight = 4
   
 [[Languages.en.menu.main]]
@@ -180,25 +180,22 @@ weight = 5
 # footer menu
 
 [[Languages.en.menu.footer]]
-name = "teacher"
-url = "teacher"
+name = "Lions Clubs International"
+url = "https://www.lionsclubs.org"
 
 [[Languages.en.menu.footer]]
-name = "notice"
-url = "notice"
+name = "Georgia Lions Lighthouse"
+url = "https://lionslighthouse.org/"
 
-[[Languages.en.menu.footer]]
-name = "event"
-url = "event"
-
-[[Languages.en.menu.footer]]
-name = "scholarship"
-url = "scholarship"
-
-[[Languages.en.menu.footer]]
-name = "research"
-url = "research"
-
-
-
+#[[Languages.en.menu.footer]]
+#name = "event"
+#url = "event"
+#
+#[[Languages.en.menu.footer]]
+#name = "scholarship"
+#url = "scholarship"
+#
+#[[Languages.en.menu.footer]]
+#name = "research"
+#url = "research"
 
