--- a/theme.toml
+++ b/theme.toml
@@ -3,8 +3,8 @@ license = "CC BY 3.0"
 licenselink = "https://creativecommons.org/licenses/by/3.0/"
 description = "Hugo port of the Themefisher’s Educenter theme"
 homepage = "https://gethugothemes.com/products/educenter-hugo/"
-tags = ["blog",'google-analytics', 'fast', 'modern', 'minimal', 'minimalistic', 'business', 'education', 'white', 'light', 'multilingual', "bootstrap", "company", "portfolio", "projects", "responsive", "themefisher", "gethugothemes"]
-features = ["blog", "company", "responsive", "seo-friendly"]
+tags = ["news",'google-analytics', 'fast', 'modern', 'minimal', 'minimalistic', 'business', 'education', 'white', 'light', 'multilingual', "bootstrap", "company", "portfolio", "projects", "responsive", "themefisher", "gethugothemes"]
+features = ["news", "company", "responsive", "seo-friendly"]
 min_version = "0.70.0"
 
 [author]
