--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -4,15 +4,15 @@ slider:
   bg_image : "images/banner/banner-1.jpg"
   slider_item:
     # slider item loop
-    - title : "Register now for State Convention!"
-      content : "June 4-6 at the Sheraton Atlanta Hotel"
-      animation_in : "left"
-      animation_out : "right"
-      # available animation : left, right, up, down
-      button:
-        enable : true
-        label : "Register"
-        link : "event/event-state-conv-06-2021"
+#    - title : "Register now for State Convention!"
+#      content : "June 4-6 at the Sheraton Atlanta Hotel"
+#      animation_in : "left"
+#      animation_out : "right"
+#      # available animation : left, right, up, down
+#      button:
+#        enable : true
+#        label : "Register"
+#        link : "event/event-state-conv-06-2021"
 
 #    - title : "Saturday's Road Cleanup Postponed"
 #      content : "Due to impending weather"
@@ -74,15 +74,16 @@ banner_feature:
   image : "images/banner/banner-feature.png"
   feature_item:
     # feature item loop
-    - name : "State Convention"
-      icon : "ti-announcement" # icon pack : https://themify.me/themify-icons
-      content : "Join us for the Georgia State Convention in Atlanta, June 4-6!"
-      link: "event/event-state-conv-06-2021"
+#    - name : "State Convention"
+#      icon : "ti-announcement" # icon pack : https://themify.me/themify-icons
+#      content : "Join us for the Georgia State Convention in Atlanta, June 4-6!"
+#      link: "event/event-state-conv-06-2021"
 
     # feature item loop
-#    - name : "Alpharetta Lions Newsletter"
-#      icon : "ti-layout-cta-left" # icon pack : https://themify.me/themify-icons
-#      content : "Monthly newsletter covering past service projects, upcoming events, and monthly meetings."
+    - name : "Alpharetta Lions Newsletter"
+      icon : "ti-layout-cta-left" # icon pack : https://themify.me/themify-icons
+      content : "Monthly newsletter covering past service projects, upcoming events, and monthly meetings."
+      link: "news"
 
     # feature item loop
     - name : "Monthly Meetings"
