--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -4,15 +4,15 @@ slider:
   bg_image : "images/banner/banner-1.jpg"
   slider_item:
     # slider item loop
-    - title : "Alpharetta Lions Club 2021 Charity Golf Tournament"
-      content : "September 27 at the Crooked Creek Club"
-      animation_in : "left"
-      animation_out : "right"
-      # available animation : left, right, up, down
-      button:
-        enable : true
-        label : "Register or Sponsor"
-        link : "fundraiser/golf"
+#    - title : "Alpharetta Lions Club 2021 Charity Golf Tournament"
+#      content : "September 27 at the Crooked Creek Club"
+#      animation_in : "left"
+#      animation_out : "right"
+#      # available animation : left, right, up, down
+#      button:
+#        enable : true
+#        label : "Register or Sponsor"
+#        link : "fundraiser/golf"
 
 #    - title : "Saturday's Road Cleanup Postponed"
 #      content : "Due to impending weather"
